Pagination: Fix overflowing on large page numbers

--- a/viewer/static/viewer/style.less
+++ b/viewer/static/viewer/style.less
@@ -63,8 +63,11 @@ fieldset {
     display:grid;
     grid-template-columns: auto auto auto;
     justify-content: space-between;
-    > div{
+    > div {
         width: 90px;
+    }
+    > span {
+        width: auto;
     }
     a {
         cursor: pointer;
